# Singularity

./: CMakeLists.txt  LICENCE.txt  README.md  Singularity.project  Singularity.workspace  Version.txt  index.html  params.json
XdevLPlugins/XdevLParticles/: CMakeLists.txt  Particle.h  ParticleDynamic.h  ParticleDynamicEuler.h  ParticleEmitter.h  ParticleEmitterBox.h  ParticleGenerator.cpp  ParticleGenerator.h  ParticleGeneratorBox.h  ParticleGeneratorBoxHull.h  ParticleGeneratorPlane.h  ParticleGeneratorSphere.h  ParticleRenderer.h  ParticleRendererImpl.h  ParticleServer.cpp  ParticleServer.h  ParticleSystem.h  XdevLParticles.h  XdevLParticlesImpl.cpp  XdevLParticlesImpl.h
binary/resources/fonts/: Roboto-Regular_info.txt  Sarpanch-Regular_info.txt  default_info.txt
binary/resources/ini/: fonttest.xml  singularity.xml  uitest.xml
binary/resources/models/: astroid1.blend  astroid1.blend1  astroid1.mtl  box.blend  box.blend1  box.fbx  box.mtl  cylinder.mtl  monkey.mtl  plane.mtl  scene2.blend  scene2.mtl  spaceship.blend  spaceship.mtl  sphere.blend  sphere.dae  sphere.mtl  torus.mtl
binary/resources/models/HN21/: space_ship.mtl~
binary/resources/models/HN48/: FederationInterceptor1.mtl  Federation_Interceptor_HN48_flying.mtl
binary/resources/models/sponza/: sponza2.mtl
binary/resources/shaders/: blurBox.fs  blurGaus_fs.glsl  blurGaus_vs.glsl  brdf.glsl  debug_fs.glsl  debug_vs.glsl  depthOfField.fs  depthOfField.vs  directional_lighting.fs  directional_lighting.vs  fb.fs  fb.vs  fillGBufferBillboards_fs.glsl  fillGBufferBillboards_vs.glsl  point_lighting.fs  point_lighting.vs  shadow.glsl  shadowMap_fs.glsl  shadowMap_vs.glsl  spot_lighting.fs  spot_lighting.vs  text_fs.glsl  text_vs.glsl  toneMapping.fs  toneMapping.vs  ui_fs.glsl  ui_vs.glsl
binary/resources/shaders/deferred/: doDeferredLighting_fs.glsl  doDeferredLighting_vs.glsl  fillGBuffer_fs.glsl  fillGBuffer_vs.glsl
binary/resources/shaders/splashscreen/: splash_fs.glsl  splash_vs.glsl
dependencies/freeimage/: CMakeLists.txt
dependencies/freetype/lib/linux/: libfreetype.so.6.5.0
dependencies/freetype/lib/macosx/: libfreetype.6.dylib
documents/: Singularity.odt
src/: Singularity.cpp  Singularity.h
src/Engine/: Camera.cpp  Camera.h  Color.h  Frustum.cpp  Frustum.h  GBuffer.cpp  GBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.h  Model.cpp  Model.h  Moveable.cpp  Moveable.h  ProceduralSystem.cpp  ProceduralSystem.h  SkyBox.cpp  SkyBox.h  SoanMotionState.cpp  SoanMotionState.h  TextureServer.cpp  TextureServer.h  Transformable.cpp  Transformable.h  Types.h
src/Engine/Effects/: DepthOfField.cpp  DepthOfField.h  GausBlur.cpp  GausBlur.h  PostProcessEffect.cpp  PostProcessEffect.h  ShadowMap.cpp  ShadowMap.h  ToneMapping.cpp  ToneMapping.h
src/Engine/Entity/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/Engine/Fonts/: XdevLFont.h  XdevLFontImpl.cpp  XdevLFontImpl.h  XdevLFontSystem.h  XdevLFontSystemImp.cpp  XdevLFontSystemImpl.cpp  XdevLFontSystemImpl.h  XdevLTextLayout.h  XdevLTextLayoutImpl.cpp  XdevLTextLayoutImpl.h
src/Engine/GUI/: AABB.h  Button.h  Canvas.h  CanvasXdevLOpenGL.cpp  CanvasXdevLOpenGL.h  CheckBox.cpp  CheckBox.h  ComboBox.h  MenuBar.h  Node.h  UIBase.cpp  UIBase.h  UIRenderer.h  UIRendererImpl.cpp  UIRendererImpl.h  VBox.h  Widget.h  WidgetSceneSystem.h  WidgetSceneSystemUtils.h  Widgets.h
src/Engine/Particles/: Particle.h  ParticleDynamic.cpp  ParticleDynamic.h  ParticleDynamicEuler.cpp  ParticleDynamicEuler.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleEmitterBox.h  ParticleGenerator.cpp  ParticleGenerator.h  ParticleGeneratorBox.h  ParticleGeneratorBoxHull.h  ParticleGeneratorPlane.cpp  ParticleGeneratorPlane.h  ParticleGeneratorSphere.cpp  ParticleGeneratorSphere.h  ParticleRenderer.h  ParticleRendererImpl.cpp  ParticleRendererImpl.h  ParticleRendererShaderCg.cpp  ParticleRendererShaderCg.h  ParticleServer.cpp  ParticleServer.h  ParticleSystem.h
src/Engine/Physics/: Physics.cpp  Physics.h
src/Game/: Actor.cpp  Actor.h  Bullet.cpp  Bullet.h  Renderable.cpp  Renderable.h  SpaceShip.cpp  SpaceShip.h  SpaceShipCommands.h  SpaceShipInputHandler.cpp  SpaceShipInputHandler.h
src/Game/Universe/: Astroid.cpp  Astroid.h  CelestialObject.cpp  CelestialObject.h  Comet.cpp  Comet.h  Planet.cpp  Planet.h  PlanetarySystem.cpp  PlanetarySystem.h  Satellite.cpp  Satellite.h  Star.cpp  Star.h  UnisersalUnits.h
src/Utils/: AssimpToModel.cpp  AssimpToModel.h  FPSCounter.cpp  FPSCounter.h  ProceduralShapes.h  SignedDistanceFieldGenerator.cpp  SignedDistanceFieldGenerator.h  SingularityDebugDrawer.cpp  SingularityDebugDrawer.h  SplashScreen.cpp  SplashScreen.h  TinyMathBullet3Utils.h  glew.c
tools/CodeCompletionGenerator/: CodeCompletionGenerator.project  main.cpp
tools/FontTest/: FontTest.project  fonttest.cpp
tools/SDFGenerator/: SDFGenerator.cpp  SDFGenerator.project
tools/TextureFontCreator/: TextureFontCreator.cpp  TextureFontCreator.project  TrueTypeFont.cpp  TrueTypeFont.h
tools/UITest/: UITest.project  main.cpp
tools/filo/: Application.cpp  Application.h  filo.cpp  filo.project
