cmake_minimum_required(VERSION 2.8)

project(XdevLParticles)

set(XdevLParticlesLibrary XdevLParticles)

set(HEADERS_DIR ${XDEVL_PLUGINS}/XdevLParticles)
set(SRC_DIR ${XDEVL_PLUGINS}/XdevLParticles)

set(XDEVLPARTICLES_PLUGIN_MAJOR_VERSION 0)
set(XDEVLPARTICLES_PLUGIN_MINOR_VERSION 1)
set(XDEVLPARTICLES_PLUGIN_PATCH_VERSION 0)
set(XDEVLPARTICLES_PLUGIN_VERSION "${XDEVLPARTICLES_PLUGIN_MAJOR_VERSION}.${XDEVLPARTICLES_PLUGIN_MINOR_VERSION}.${XDEVLPARTICLES_PLUGIN_PATCH_VERSION}")

add_definitions(
	-DXDEVLPARTICLES_PLUGIN_MAJOR_VERSION=${XDEVLPARTICLES_PLUGIN_MAJOR_VERSION}
	-DXDEVLPARTICLES_PLUGIN_MINOR_VERSION=${XDEVLPARTICLES_PLUGIN_MINOR_VERSION}
	-DXDEVLPARTICLES_PLUGIN_PATCH_VERSION=${XDEVLPARTICLES_PLUGIN_PATCH_VERSION}
)

set(XDEVLPARTICLES_MODULE_MAJOR_VERSION 0)
set(XDEVLPARTICLES_MODULE_MINOR_VERSION 1)
set(XDEVLPARTICLES_MODULE_PATCH_VERSION 0)
set(XDEVLPARTICLES_MODULE_VERSION "${XDEVLPARTICLES_MODULE_MAJOR_VERSION}.${XDEVLPARTICLES_MODULE_MINOR_VERSION}.${XDEVLPARTICLES_MODULE_PATCH_VERSION}")

add_definitions(
	-DXDEVLPARTICLES_MODULE_MAJOR_VERSION=${XDEVLPARTICLES_MODULE_MAJOR_VERSION}
	-DXDEVLPARTICLES_MODULE_MINOR_VERSION=${XDEVLPARTICLES_MODULE_MINOR_VERSION}
	-DXDEVLPARTICLES_MODULE_PATCH_VERSION=${XDEVLPARTICLES_MODULE_PATCH_VERSION}
)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${XDEVL_PLUGINS}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${XDEVL_PLUGINS}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${XDEVL_PLUGINS}/lib)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${XDEVL_PLUGINS}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG  ${XDEVL_PLUGINS}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE  ${XDEVL_PLUGINS}/lib)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${XDEVL_PLUGINS}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG  ${XDEVL_PLUGINS}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${XDEVL_PLUGINS}/lib)

set(HEADER_INTERFACE_FILE ${HEADERS_DIR}/XdevLParticles.h)

set(HEADER_FILES
	${HEADER_INTERFACE_FILE}
	${HEADERS_DIR}/XdevLParticlesImpl.h
	${HEADERS_DIR}/Particle.h
	${HEADERS_DIR}/ParticleDynamicEuler.h
	${HEADERS_DIR}/ParticleEmitter.h
	${HEADERS_DIR}/ParticleEmitterBox.h
	${HEADERS_DIR}/ParticleGenerator.h
	${HEADERS_DIR}/ParticleGeneratorBox.h
	${HEADERS_DIR}/ParticleGeneratorBoxHull.h
	${HEADERS_DIR}/ParticleGeneratorPlane.h
	${HEADERS_DIR}/ParticleGeneratorSphere.h
	${HEADERS_DIR}/ParticleRenderer.h
	${HEADERS_DIR}/ParticleRendererImpl.h
	${HEADERS_DIR}/ParticleServer.h
)

set(SOURCE_FILES
	${SRC_DIR}/XdevLParticlesImpl.cpp
	${SRC_DIR}/ParticleDynamic.cpp
	${SRC_DIR}/ParticleDynamicEuler.cpp
	${SRC_DIR}/ParticleEmitter.cpp
	${SRC_DIR}/ParticleGenerator.cpp
	${SRC_DIR}/ParticleGeneratorPlane.cpp
	${SRC_DIR}/ParticleGeneratorSphere.cpp
	${SRC_DIR}/ParticleRendererImpl.cpp
	${SRC_DIR}/ParticleServer.cpp
)

include_directories(
	${XDEVL_HOME}/include
	${XDEVL_PLUGINS}
	${XDEVL_PLUGINS}/XdevLParticles
)

link_directories(
	${XDEVL_HOME}/lib
	${XDEVL_EXTERNALS}/lib
)
if(PLATFORM_MACOSX)
	set( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -F${XDEVL_EXTERNALS}/lib")
endif()

if(CMAKE_BUILD_TYPE MATCHES Debug)
	set(LIBS XdevLd)
else()
	set(LIBS XdevL)
endif()

if(PLATFORM_MACOSX)
	set(LIBS ${LIBS} dl)
elseif(PLATFORM_LINUX)
	set(LIBS ${LIBS} dl)
elseif(PLATFORM_WINDOWS)

endif()

add_library(${XdevLParticlesLibrary} SHARED
    ${HEADER_FILES}
    ${SOURCE_FILES}
)

target_link_libraries(${XdevLParticlesLibrary} ${LIBS})

set_property(TARGET ${XdevLParticlesLibrary} PROPERTY PREFIX "")

if(CMAKE_BUILD_TYPE MATCHES Debug)
set_property(TARGET ${XdevLParticlesLibrary} PROPERTY SUFFIX "-${XDEVLPARTICLES_PLUGIN_VERSION}d${XDEVL_SHARED_LIBRARY_FILE_EXTENSION}")
else()
set_property(TARGET ${XdevLParticlesLibrary} PROPERTY SUFFIX "-${XDEVLPARTICLES_PLUGIN_VERSION}${XDEVL_SHARED_LIBRARY_FILE_EXTENSION}")
endif()

install(FILES ${HEADER_INTERFACE_FILE} DESTINATION "${XDEVL_PLUGINS_INCLUDE_INSTALL_PATH}/${PROJECT_NAME}")
install(TARGETS ${XdevLParticlesLibrary} DESTINATION ${XDEVL_PLUGINS_INSTALL_PATH})

